html y css code

--- a/index.html
+++ b/index.html
@@ -26,18 +26,104 @@
 
 <!--main Content-->
 <section class="main-content">
-	<img src="img/hd.png" alt="Cargando imajen">
 	<h1>Aqui va el titulo del main article</h1>
 	<p>Awui va el parrafo del main content</p>
 </section>
 
+
+
+<h2 class="titulo-listas">Cuidado para la piel</h2>
+
+
+	<div class="responsive">
+	<div class="gallery">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/9.jpg" alt="Cinque Terre" width="600" height="400">
+	</a>
+	<div class="desc">Add a description of the image here</div>
+	</div>
+	</div>
+
+
+	<div class="responsive">
+	<div class="gallery">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/9.jpg" alt="Forest" width="600" height="400">
+	</a>
+	<div class="desc">Add a description of the image here</div>
+	</div>
+	</div>
+
+	<div class="responsive">
+	<div class="gallery">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/9.jpg" alt="Northern Lights" width="600" height="400">
+	</a>
+	<div class="desc">Add a description of the image here</div>
+	</div>
+	</div>
+
+	<div class="responsive">
+	<div class="gallery">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/9.jpg" alt="Mountains" width="600" height="400">
+	</a>
+	<div class="desc">Add a description of the image here</div>
+	</div>
+	</div>
+
+	<div class="clearfix"></div>
+
+	
+
+
+
 <!--Lista de Prroductos-->
 <section class="Lista-productos">
-	<article><img src="" alt="cargando imajen "></article></article>
-	<article><img src="" alt="cargando imajen "></article></article>
-	<article><img src="" alt="cargando imajen "></article></article>
-	<article><img src="" alt="cargando imajen "></article></article>
-	<article><img src="" alt="cargando imajen "></article></article></section>
+	
+<h2 class="titulo-listas">Cara</h2>
+
+	<div class="responsive">
+	<div class="gallery">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/9.jpg" alt="Cinque Terre" width="600" height="400">
+	</a>
+	<div class="desc">Add a description of the image here</div>
+	</div>
+	</div>
+
+
+	<div class="responsive">
+	<div class="gallery">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/9.jpg" alt="Forest" width="600" height="400">
+	</a>
+	<div class="desc">Add a description of the image here</div>
+	</div>
+	</div>
+
+	<div class="responsive">
+	<div class="gallery">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/9.jpg" alt="Northern Lights" width="600" height="400">
+	</a>
+	<div class="desc">Add a description of the image here</div>
+	</div>
+	</div>
+
+	<div class="responsive">
+	<div class="gallery">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/9.jpg" alt="Mountains" width="600" height="400">
+	</a>
+	<div class="desc">Add a description of the image here</div>
+	</div>
+	</div>
+
+	<div class="clearfix"></div>
+
+
+	</section>
 
 <!-- Follow -->
 <section class="social"><p>Follow TechNews</p>
