cambios html y css

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 
 
-<h2 class="titulo-listas">Cuidado para la piel</h2>
+<h2 class="titulo-listas">Productos Nuevos</h2>
 
-
+<!--Productos-->
 	<div class="responsive">
 	<div class="gallery">
 	<a target="_blank" href="img/9.jpg">
@@ -74,14 +74,17 @@
 
 	<div class="clearfix"></div>
 
+
 	
 
 
 
 <!--Lista de Prroductos-->
+
+<h2 class="titulo-listas">Cara</h2>
+
 <section class="Lista-productos">
 	
-<h2 class="titulo-listas">Cara</h2>
 
 	<div class="responsive">
 	<div class="gallery">
