--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 </section>
 
 
-
+<!--Seccion title-->
 <h2 class="titulo-listas">Productos Nuevos</h2>
 
-<!--Productos-->
+<!--Productos nuevos-->
 	<div class="responsive">
 	<div class="gallery">
 	<a target="_blank" href="img/9.jpg">
-	<img src="img/9.jpg" alt="Cinque Terre" width="600" height="400">
+	<img src="img/9.jpg" alt="Cinque Terre" >
 	</a>
 	<div class="desc">Add a description of the image here</div>
 	</div>
