--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/main.css">
 
 </head>
 <body>
 
- <!--Titulo del Sitio web-->
+                             <!--Titulo del Sitio web-->
 <header><h1>Vikyland</h1></header>
 
 <nav>
@@ -27,113 +26,110 @@
   </ul>
 </nav>
 
-<!--main Content-->
+                            <!--main Content-->
 <section class="main-content">
 	<h1>Aqui va el titulo del main article</h1>
 	<p>Awui va el parrafo del main content</p>
 </section>
 
 
-<!--Seccion title-->
-<h2 class="tittle-list">Productos Nuevos</h2>
+	                      <!--Title on Seccion-->
+	<h2 class="tittle-list">Productos Nuevos</h2>
+	<div class="gallery-card">
 
-<!--Productos nuevos-->
-<div class="responsive">
-	<div class="gallery">
+	                       <!-- card Gallery-->
+
+<div class="card">
+<div class="card-content">
+<a target="_blank" href="img/9.jpg">
+<img src="img/image-five.jpg" alt="Mountains" ">
+</a>
+<h3>Name productt</h3>
+<p>Descripcion productt</p>
+</div>
+</div>
+
+<div class="card">
+<div class="card-content">
+<a target="_blank" href="img/9.jpg">
+<img src="img/tech-red.jpg" alt="Mountains" ">
+</a>
+<h3>Name productt</h3>
+<p>Descripcion productt</p>
+</div>
+</div>
+
+<div class="card">
+<div class="card-content">
+<a target="_blank" href="img/9.jpg">
+<img src="img/image-four.jpg" alt="Mountains" ">
+</a>
+<h3>Name productt</h3>
+<p>Descripcion productt</p>
+</div>
+</div>
+
+<div class="card">
+<div class="card-content">
+<a target="_blank" href="img/9.jpg">
+<img src="img/image-three.jpg" alt="Mountains" ">
+</a>
+<h3>Name productt</h3>
+<p>Descripcion productt</p>
+</div>
+</div>
+
+
+<div class="card">
+	<div class="card-content">
 	<a target="_blank" href="img/9.jpg">
-	<img src="img/image-five.jpg" alt="Mountains" ">
+	<img src="img/image-three.jpg" alt="Mountains" ">
 	</a>
 	<h3>Name productt</h3>
 	<p>Descripcion productt</p>
 	</div>
 	</div>
 
-	<div class="responsive">
-		<div class="gallery">
-		<a target="_blank" href="img/9.jpg">
-		<img src="img/image-five.jpg" alt="Mountains" ">
-		</a>
-		<h3>Name productt</h3>
-		<p>Descripcion productt</p>
-		</div>
-		</div>
 
-		<div class="responsive">
-			<div class="gallery">
-			<a target="_blank" href="img/9.jpg">
-			<img src="img/image-five.jpg" alt="Mountains" ">
-			</a>
-			<h3>Name productt</h3>
-			<p>Descripcion productt</p>
-			</div>
-			</div>
-
-			<div class="responsive">
-				<div class="gallery">
-				<a target="_blank" href="img/9.jpg">
-				<img src="img/image-five.jpg" alt="Mountains" ">
-				</a>
-				<h3>Name productt</h3>
-				<p>Descripcion productt</p>
-				</div>
-				</div>
-
-				<div class="responsive">
-					<div class="gallery">
-					<a target="_blank" href="img/9.jpg">
-					<img src="img/image-five.jpg" alt="Mountains" ">
-					</a>
-					<h3>Name productt</h3>
-					<p>Descripcion productt</p>
-					</div>
-					</div>
-
-					<div class="responsive">
-						<div class="gallery">
-						<a target="_blank" href="img/9.jpg">
-						<img src="img/image-five.jpg" alt="Mountains" ">
-						</a>
-						<h3>Name productt</h3>
-						<p>Descripcion productt</p>
-						</div>
-						</div>
-
-						<div class="responsive">
-							<div class="gallery">
-							<a target="_blank" href="img/9.jpg">
-							<img src="img/image-five.jpg" alt="Mountains" ">
-							</a>
-							<h3>Name productt</h3>
-							<p>Descripcion productt</p>
-							</div>
-							</div>
-
-							<div class="responsive">
-								<div class="gallery">
-								<a target="_blank" href="img/9.jpg">
-								<img src="img/image-five.jpg" alt="Mountains" ">
-								</a>
-								<h3>Name productt</h3>
-								<p>Descripcion productt</p>
-								</div>
-								</div>
-
-	<div class="responsive">
-	<div class="gallery">
+<div class="card">
+	<div class="card-content">
 	<a target="_blank" href="img/9.jpg">
-	<img src="img/image-five.jpg" alt="Mountains" ">
+	<img src="img/image-three.jpg" alt="Mountains" ">
 	</a>
 	<h3>Name productt</h3>
 	<p>Descripcion productt</p>
 	</div>
 	</div>
 
-	<div class="clearfix"></div>
+	
+<div class="card">
+	<div class="card-content">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/image-three.jpg" alt="Mountains" ">
+	</a>
+	<h3>Name productt</h3>
+	<p>Descripcion productt</p>
+	</div>
+	</div>
 
-
+	
+<div class="card">
+	<div class="card-content">
+	<a target="_blank" href="img/9.jpg">
+	<img src="img/image-three.jpg" alt="Mountains" ">
+	</a>
+	<h3>Name productt</h3>
+	<p>Descripcion productt</p>
+	</div>
+	</div>
+	
 	
 
 
+
+
+
+</div>
 <!--Seccion title-->
 
 
@@ -169,6 +165,7 @@
   <footer class="footer">
     <h3>Tech News Copyright</h3>
   </footer>
+
 
 
 </html>
