--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
  <!--Titulo del Sitio web-->
 <header><h1>Vikyland</h1></header>
-<!--Barra  de Navegacion-->
+
 <nav>
-  <ul>
-  	<li><a href="">Inicio</a></li>
-	<li><a href="">Maquillaje</a></li>
+	<ul>
+		<li><a href="">Inicio</a></li>
+		<li><a href="">Maquillaje</a></li>
+		<!--Barra  de Navegacion-->
 	<li><a href="">Manos</a></li>
 	<li><a href="">Pies</a></li>
 	<li><a href="">Cara</a></li>
@@ -34,43 +35,96 @@
 
 
 <!--Seccion title-->
-<h2 class="titulo-listas">Productos Nuevos</h2>
+<h2 class="tittle-list">Productos Nuevos</h2>
 
 <!--Productos nuevos-->
-	<div class="responsive">
+<div class="responsive">
 	<div class="gallery">
 	<a target="_blank" href="img/9.jpg">
-	<img src="img/9.jpg" alt="Cinque Terre" >
+	<img src="img/image-five.jpg" alt="Mountains" ">
 	</a>
-	<div class="desc">Add a description of the image here</div>
-	</div>
-	</div>
-
-
-	<div class="responsive">
-	<div class="gallery">
-	<a target="_blank" href="img/9.jpg">
-	<img src="img/9.jpg" alt="Forest" width="600" height="400">
-	</a>
-	<div class="desc">Add a description of the image here</div>
+	<h3>Name productt</h3>
+	<p>Descripcion productt</p>
 	</div>
 	</div>
 
 	<div class="responsive">
-	<div class="gallery">
-	<a target="_blank" href="img/9.jpg">
-	<img src="img/9.jpg" alt="Northern Lights" width="600" height="400">
-	</a>
-	<div class="desc">Add a description of the image here</div>
-	</div>
-	</div>
+		<div class="gallery">
+		<a target="_blank" href="img/9.jpg">
+		<img src="img/image-five.jpg" alt="Mountains" ">
+		</a>
+		<h3>Name productt</h3>
+		<p>Descripcion productt</p>
+		</div>
+		</div>
+
+		<div class="responsive">
+			<div class="gallery">
+			<a target="_blank" href="img/9.jpg">
+			<img src="img/image-five.jpg" alt="Mountains" ">
+			</a>
+			<h3>Name productt</h3>
+			<p>Descripcion productt</p>
+			</div>
+			</div>
+
+			<div class="responsive">
+				<div class="gallery">
+				<a target="_blank" href="img/9.jpg">
+				<img src="img/image-five.jpg" alt="Mountains" ">
+				</a>
+				<h3>Name productt</h3>
+				<p>Descripcion productt</p>
+				</div>
+				</div>
+
+				<div class="responsive">
+					<div class="gallery">
+					<a target="_blank" href="img/9.jpg">
+					<img src="img/image-five.jpg" alt="Mountains" ">
+					</a>
+					<h3>Name productt</h3>
+					<p>Descripcion productt</p>
+					</div>
+					</div>
+
+					<div class="responsive">
+						<div class="gallery">
+						<a target="_blank" href="img/9.jpg">
+						<img src="img/image-five.jpg" alt="Mountains" ">
+						</a>
+						<h3>Name productt</h3>
+						<p>Descripcion productt</p>
+						</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+							<a target="_blank" href="img/9.jpg">
+							<img src="img/image-five.jpg" alt="Mountains" ">
+							</a>
+							<h3>Name productt</h3>
+							<p>Descripcion productt</p>
+							</div>
+							</div>
+
+							<div class="responsive">
+								<div class="gallery">
+								<a target="_blank" href="img/9.jpg">
+								<img src="img/image-five.jpg" alt="Mountains" ">
+								</a>
+								<h3>Name productt</h3>
+								<p>Descripcion productt</p>
+								</div>
+								</div>
 
 	<div class="responsive">
 	<div class="gallery">
 	<a target="_blank" href="img/9.jpg">
-	<img src="img/9.jpg" alt="Mountains" width="600" height="400">
+	<img src="img/image-five.jpg" alt="Mountains" ">
 	</a>
-	<div class="desc">Add a description of the image here</div>
+	<h3>Name productt</h3>
+	<p>Descripcion productt</p>
 	</div>
 	</div>
 
@@ -80,55 +134,8 @@
 	
 
 
+<!--Seccion title-->
 
-<!--Lista de Prroductos-->
-
-<h2 class="titulo-listas">Cara</h2>
-
-<section class="Lista-productos">
-	
-
-	<div class="responsive">
-	<div class="gallery">
-	<a target="_blank" href="img/9.jpg">
-	<img src="img/9.jpg" alt="Cinque Terre" width="600" height="400">
-	</a>
-	<div class="desc">Add a description of the image here</div>
-	</div>
-	</div>
-
-
-	<div class="responsive">
-	<div class="gallery">
-	<a target="_blank" href="img/9.jpg">
-	<img src="img/9.jpg" alt="Forest" width="600" height="400">
-	</a>
-	<div class="desc">Add a description of the image here</div>
-	</div>
-	</div>
-
-	<div class="responsive">
-	<div class="gallery">
-	<a target="_blank" href="img/9.jpg">
-	<img src="img/9.jpg" alt="Northern Lights" width="600" height="400">
-	</a>
-	<div class="desc">Add a description of the image here</div>
-	</div>
-	</div>
-
-	<div class="responsive">
-	<div class="gallery">
-	<a target="_blank" href="img/9.jpg">
-	<img src="img/9.jpg" alt="Mountains" width="600" height="400">
-	</a>
-	<div class="desc">Add a description of the image here</div>
-	</div>
-	</div>
-
-	<div class="clearfix"></div>
-
-
-	</section>
 
 <!-- Follow -->
 <section class="social"><p>Follow TechNews</p>
